# pdfdrive

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker_compose.yml  run_scraper.yml
pdfdrive/: Dockerfile  items.jsonl  quotes.jsonl
pdfdrive/pdfdrive/: items.py  middlewares.py  pipelines.py  requirements.txt  settings.py
pdfdrive/pdfdrive/spiders/: pdfdrive_spider.py
